<resources>
    <string name="app_name">ScanLori</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_fr">Search Fragment</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="add">Add Food</string>
    <string name="result">ImageSearch Result</string>
    <string name="see_detail">See Detail</string>
</resources>