<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.camera.CameraFragment">

    <ImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal"
        app:tint="@color/purple_1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@drawable/box"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/btCamera"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/camera"
        android:src="@drawable/ic_takephoto"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_gallery"
        app:layout_constraintStart_toStartOf="@+id/iv_gallery"
        app:layout_constraintTop_toBottomOf="@+id/iv_gallery" />


    <ImageView
        android:id="@+id/iv_gallery"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/gallery"
        android:src="@drawable/ic_image"
        app:tint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/btCamera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />


    <TextView
        android:id="@+id/tv_add_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_add_food"
        app:layout_constraintStart_toStartOf="@+id/iv_add_food"
        app:layout_constraintTop_toBottomOf="@+id/iv_add_food" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/result"
        android:textColor="@color/purple_1"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal1" />


    <TextView
        android:id="@+id/tv_see_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:textColor="@color/purple_1"
        android:text="@string/see_detail"
        app:layout_constraintEnd_toEndOf="@+id/tv_result"
        app:layout_constraintStart_toStartOf="@+id/tv_result"
        app:layout_constraintTop_toBottomOf="@+id/tv_result" />

    <ImageView
        android:id="@+id/iv_add_food"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/add"
        android:src="@drawable/ic_add"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/btCamera"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:tint="@color/white" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.1"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal1"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.6"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>